Changed many default key-bindings to vim-like key-bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,42 @@
+# Changing the default prefix key from ctrl-b to ctrl-space
 unbind C-b
 set -g prefix C-space
+
+# making reload key for the config 
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+
+# Adding mouse mode
 set -g mouse on
+
+# Changing splitting panes from prefix-% and prefix-" to prefix-v and prefix-h
+unbind v
+unbind h
+
+unbind % # Split vertically
+unbind '"' # Split horizontally
+
+bind v split-window -h -c "#{pane_current_path}"
+bind h split-window -v -c "#{pane_current_path}"
+
+# Enabling moving between panes using ctrl-hjkl
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+# Making prefix-n for changing name of current window and prefix-w for new window
+unbind n  #DEFAULT KEY: Move to next window
+unbind w  #DEFAULT KEY: change current window interactively
+
+bind n command-prompt "rename-window '%%'"
+bind w new-window -c "#{pane_current_path}"
+
+# Making the base index for windows and panes, 1 instead of the default 0
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
+# Changing the key for next and previous window from prefix-n and prefix-p to mod(alt)-k and mod(alt)-j
+bind -n M-j previous-window
+bind -n M-k next-window
 
