--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,3 +40,27 @@ set-window-option -g pane-base-index 1
 bind -n M-j previous-window
 bind -n M-k next-window
 
+# changing the status bar color
+set -g status-style fg=white,bold,bg=blue
+
+# enabling vim-like keybindings for navigation within the terminal
+set-window-option -g mode-keys vi
+
+# setting keybindings for copying
+unbind -T copy-mode-vi Space; #Default for begin-selection
+unbind -T copy-mode-vi Enter; #Default for copy-selection
+
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
+# setting plugin manager for tmux
+set -g @plugin 'tmux-plugins/tpm'
+
+# setting copycat plugin 
+set -g @plugin 'tmux-plugins/tmux-copycat'
+
+# setting extrakto plugin
+set -g @plugin 'laktak/extrakto'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
