Change some colors of the satus bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,7 +41,7 @@ bind -n M-j previous-window
 bind -n M-k next-window
 
 # changing the status bar color
-set -g status-style fg=white,bold,bg=blue
+set -g status-style fg=black,bg=brightyellow
 
 # enabling vim-like keybindings for navigation within the terminal
 set-window-option -g mode-keys vi
